@@ -1,8 +1,8 @@
 <HTML>
   <HEAD>
-    <TITLE>LIXA (LIbre XA) API reference guide</TITLE>
+    <TITLE>LIXA: Free/Open Source Software XA Transaction Manager</TITLE>
     <LINK HREF="doxygen.css" REL="stylesheet" TYPE="text/css">
   </HEAD>
   <BODY BGCOLOR="#EBEDF5">
     <H1><A HREF="http://sourceforge.net/projects/lixa/">
-    libjf API reference guide</A></H1>
+    LIXA: Free/Open Source Software XA Transaction Manager</A></H1>
