@@ -1,6 +1,5 @@
 # TX (Transaction Demarcation) Specification compliance case tests
 
-m4_include([tx_b_2.at])
 m4_include([tx_3_2.at])
 m4_include([tx_3_3.at])
 m4_include([tx_3_3_1.at])
@@ -16,4 +15,5 @@ m4_include([tx_5_25.at])
 m4_include([tx_5_26.at])
 m4_include([tx_5_27.at])
 m4_include([tx_7_52.at])
+m4_include([tx_b_2.at])
 
