@@ -41,6 +41,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -65,6 +66,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_start/-3
 xa_close/0
 ]])
@@ -89,6 +91,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -113,6 +116,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/8
+xa_forget/0
 xa_start/-3
 xa_close/0
 ]])
@@ -137,6 +141,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_DATA([monkey1d.conf],
@@ -144,6 +149,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0019 0 -9], [0], [ignore], [ignore])
@@ -161,6 +167,7 @@ xa_open/0
 xa_start/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_start/-3
 xa_close/0
 ]])
@@ -169,6 +176,7 @@ AT_DATA([monkey1d.conf],
 xa_open/0
 xa_end/0
 xa_rollback/7
+xa_forget/0
 xa_close/0
 ]])
 AT_CHECK([export LIXA_PROFILE=CASE_PROF_0003 ; lixa_test_exec.sh noreset none case0019 1 -109], [0], [ignore], [ignore])
