@@ -1,6 +1,6 @@
 LOG:
 
-         - 0.5.10 implemented test case TX/B.2/0.0
+20100531 - 0.5.10 implemented test case TX/B.2/0.0
                   implemented test case TX/B.2/0.1
                   implemented test case TX/B.2/0.2
                   implemented test case TX/B.2/0.3
@@ -9,6 +9,7 @@ LOG:
                   implemented test case TX/B.2/1.1
                   optimized one phase commit behavior with dynamically 
                   registered resource managers
+                  fixed bug # 3009182
 
 20100530 - 0.5.9  implemented test case TX/7.52/0.0
                   implemented test case TX/7.52/0.1
